--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@
                         <div class="footer-links--follow">
                             <h1>Follow us on:</h1>
                             <div class="footer-links--follow-buttons">
-                                <a id="follow-fb" class="follow-button" href="#"><span class="icon-home"></a>
-                                <a id="follow-li" class="follow-button" href="#"><span class="icon-home"></a>
-                                <a id="follow-tw" class="follow-button" href="#"><span class="icon-home"></a>
-                                <a id="follow-ig" class="follow-button" href="#"><span class="icon-home"></a>
+                                <a id="follow-fb" class="follow-button" href="#"><span class="icon-facebook"></a>
+                                <a id="follow-li" class="follow-button" href="#"><span class="icon-x"></a>
+                                <a id="follow-tw" class="follow-button" href="#"><span class="icon-linkedin"></a>
+                                <a id="follow-ig" class="follow-button" href="#"><span class="icon-instagram"></a>
                             </div>
                         </div>
                     </div>
