HTML href updates

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <title>Full Service Digital Agency | Cambridgeshire & Norfolk | Netmatters</title>
 
-        <link rel="stylesheet" href="../nmWebsiteAssessment/assets/iconmoon/style.css">
-        <link rel="stylesheet" href="css/application.css">
+        <link rel="stylesheet" href="./assets/iconmoon/style.css">
+        <link rel="stylesheet" href="./css/application.css">
         <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
         <script src="assets/js/app.js" type="text/javascript" defer></script>
     </head>
