--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-menu nav-icon"></div></button>
                 <button id="button-contact">CONTACT US</button>
                 <div class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></div>
-                <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe>
+                <!-- <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe> -->
             </div>
         </aside>
 
