Fixes to every font size mistake, and birnging the website closer to the official

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <html>
     <head>
         <title>Full Service Digital Agency | Cambridgeshire & Norfolk | Netmatters</title>
+        <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
         <link rel="stylesheet" href="./assets/iconmoon/style.css">
         <link rel="stylesheet" href="./css/application.css">
-        <link rel="shortcut icon" href="img/icon/favicon.ico" type="image/x-icon">
         <script src="assets/js/app.js" type="text/javascript" defer></script>
     </head>
     
@@ -298,7 +302,7 @@
                                     <div class="star icon-star-full"></div>
                                 </div>
                                 <q>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</q>
-                                <p>Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
+                                <p id="author">Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
                             </div>
                             <div class="welcome-section2-buttons">
                                 <button id="welcome-button3">Google Reviews</button>
