Finished nav bar links

--- a/index.html
+++ b/index.html
@@ -140,9 +140,75 @@
             <aside id="sidebar">
                 <div class="container">
                     <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-menu nav-icon"></div></button>
-                    <button id="button-contact">CONTACT US</button>
+                    <button id="button-contact">Contact Us</button>
                     <div class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></div>
-                    <!-- <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe> -->
+                    <ul class="sidebar-links">
+                        <li><a href="#">Bespoke CRM</a></li>
+                        <li><a href="#">Business Automation</a></li>
+                        <li><a href="#">Software Integrations</a></li>
+                        <li><a href="#">Mobile App Development</a></li>
+                        <li><a href="#">Bespoke Databases</a></li>
+                        <li><a href="#">Sharepoint Development</a></li>
+                        <li><a href="#">Operational Systems</a></li>
+                        <li><a href="#">Business Central Implementation</a></li>
+                        <li><a href="#">Internet of Things (IoT) Software</a></li>
+                        <li><a href="#">Intranet Development</a></li>
+                        <li><a href="#">Customer Portal Development</a></li>
+                        <li><a href="#">Reporting Hub</a></li>
+                        <li><a href="#">SAP S/4HANA Management</a></li>
+                    </ul>
+                    <div class="nav-item" id="sup"><a href="#"><small>IT</small>SUPPORT</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Managed IT Support</a></li>
+                        <li><a href="#">Business IT Support</a></li>
+                        <li><a href="#">Office 365 for Business</a></li>
+                        <li><a href="#">IT Consultancy</a></li>
+                        <li><a href="#">Cloud Service Provider</a></li>
+                        <li><a href="#">Data Backup & Disaster Recovery</a></li>
+                    </ul>
+                    <div class="nav-item" id="mar"><a href="#"><small>DIGITAL</small>MARKETING</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Search Engine Optimisation (SEO)</a></li> 
+                        <li><a href="#">Pay Per Click Advertising (PPC)</a></li>
+                        <li><a href="#">Conversion Rate Optimisation (CRO)</a></li>
+                        <li><a href="#">Email Marketing</a></li>
+                        <li><a href="#">Social Media Marketing</a></li>
+                        <li><a href="#">Content Marketing</a></li>
+                    </ul>
+                    <div class="nav-item" id="ser"><a href="#"><small>TELECOMS</small>SERVICES</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Business Mobile</a></li>
+                        <li><a href="#">Hosted VoIP Provider</a></li>
+                        <li><a href="#">Business VoIP Systems</a></li>
+                        <li><a href="#">Business Broadband</a></li>
+                        <li><a href="#">Leased Lines Provider</a></li>
+                        <li><a href="#">3CX Systems</a></li>
+                    </ul>
+                    <div class="nav-item" id="des"><a href="#"><small>WEB</small>DESIGN</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Bespoke Website Design</a></li>
+                        <li><a href="#">eCommerce Website Design</a></li>
+                        <li><a href="#">Pay Monthly Websites</a></li>
+                        <li><a href="#">Branding & Design</a></li>
+                        <li><a href="#">Mobile App Development</a></li>
+                        <li><a href="#">Web Hosting</a></li>
+                    </ul>
+                    <div class="nav-item" id="sec"><a href="#"><small>CYBER</small>SECURITY</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Cyber Security Assessment</a></li>
+                        <li><a href="#">Cyber Security Management</a></li>
+                        <li><a href="#">Cyber Penetration Testing</a></li>
+                        <li><a href="#">Cyber Essentials Certification</a></li>
+                        <li><a href="#">PCI Compliance</a></li>
+                        <li><a href="#">Hacking Prevention</a></li>
+                    </ul>
+                    <div class="nav-item" id="cou"><a href="#"><small>DEVELOPER</small>COURSE</a></div>
+                    <ul class="sidebar-links">
+                        <li><a href="#">Train For A Career In Tech</a></li>
+                        <li><a href="#">Skills Bootcamp</a></li>
+                        <li><a href="#">Scion Scheme FAQs</a></li>
+                        <li><a href="#">Scion Collaborators</a></li>
+                    </ul>
                 </div>
             </aside>
 
