--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <nav class="main-nav">
                     <div class="container">
                         <ul class="main-nav-list">
-                            <li class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a>
+                            <li class="nav-item" id="sof"><a href="#"><small>CONSULTANCY</small>& DEVELOPMENT</a>
                                 <div class="container submenu-banner">
                                     <ul class="submenu-content">                                    
                                         <li id="sof1"><a href="#">Bespoke CRM</a></li>
@@ -141,7 +141,7 @@
                 <div class="container">
                     <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-menu nav-icon"></div></button>
                     <button id="button-contact">Contact Us</button>
-                    <div class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></div>
+                    <div class="nav-item" id="sof"><a href="#"><small>Consultancy</small>& Development</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Bespoke CRM</a></li>
                         <li><a href="#">Business Automation</a></li>
@@ -256,7 +256,7 @@
                             <li>
                                 <div id="sof" class="content-item-box major">
                                     <div class="content-item__icon icon-laptop"></div>
-                                    <h3>Bespoke Software</h3>
+                                    <h3>Consultancy & Development</h3>
                                     <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
                                     <button>Read More</button>
                                 </div>
