--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <ul class="main-nav-list">
                             <li class="nav-item" id="sof"><a href="#"><small>CONSULTANCY</small>& DEVELOPMENT</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Consultancy & Development Services</h2>
                                     <ul class="submenu-content">                                    
                                         <li id="sof1"><a href="#">Bespoke CRM</a></li>
                                         <li id="sof2"><a href="#">Business Automation</a></li>
@@ -64,6 +65,7 @@
                             </li>
                             <li class="nav-item" id="sup"><a href="#"><small>IT</small>SUPPORT</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our IT Support Services</h2>
                                     <ul class="submenu-content">
                                         <li id="sup1"><a href="#">Managed IT Support</a></li>
                                         <li id="sup2"><a href="#">Business IT Support</a></li>
@@ -76,6 +78,7 @@
                             </li>
                             <li class="nav-item" id="mar"><a href="#"><small>DIGITAL</small>MARKETING</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Digital Marketing Services</h2>
                                     <ul class="submenu-content">
                                         <li id="mar1"><a href="#">Search Engine Optimisation (SEO)</a></li>
                                         <li id="mar2"><a href="#">Pay Per Click Advertising (PPC)</a></li>
@@ -88,6 +91,7 @@
                             </li>
                             <li class="nav-item" id="ser"><a href="#"><small>TELECOMS</small>SERVICES</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Telecoms Services</h2>
                                     <ul class="submenu-content">
                                         <li id="ser1"><a href="#">Business Mobile</a></li>
                                         <li id="ser2"><a href="#">Hosted VoIP Provider</a></li>
@@ -100,6 +104,7 @@
                             </li>
                             <li class="nav-item" id="des"><a href="#"><small>WEB</small>DESIGN</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Web Design Services</h2>
                                     <ul class="submenu-content">
                                         <li id="des1"><a href="#">Bespoke Website Design</a></li>
                                         <li id="des2"><a href="#">eCommerce Website Design</a></li>
@@ -112,6 +117,7 @@
                             </li>
                             <li class="nav-item" id="sec"><a href="#"><small>CYBER</small>SECURITY</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Cyber Security Services</h2>
                                     <ul class="submenu-content">
                                         <li id="sec1"><a href="#">Cyber Security Assessment</a></li>
                                         <li id="sec2"><a href="#">Cyber Security Management</a></li>
@@ -124,6 +130,7 @@
                             </li>
                             <li class="nav-item" id="cou"><a href="#"><small>DEVELOPER</small>COURSE</a>
                                 <div class="container submenu-banner">
+                                    <h2>Our Developer Course Services</h2>
                                     <ul class="submenu-content">
                                         <li id="cou1"><a href="#">Train For A Career In Tech</a></li>
                                         <li id="cou2"><a href="#">Skills Bootcamp</a></li>
