Redone sidebar and completed other feedback

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="container">
                     <button id="button-toggle" onclick="toggleSidebar()"><span class="icon-menu nav-icon"></span></button>
                     <button id="button-contact">Contact Us</button>
-                    <div class="nav-item" id="sof"><a href="#"><small>Consultancy</small>& Development</a></div>
+                    <div class="nav-item" id="sof"><a href="#">Consultancy & Development</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Bespoke CRM</a></li>
                         <li><a href="#">Business Automation</a></li>
@@ -161,7 +161,7 @@
                         <li><a href="#">Reporting Hub</a></li>
                         <li><a href="#">SAP S/4HANA Management</a></li>
                     </ul>
-                    <div class="nav-item" id="sup"><a href="#"><small>IT</small>SUPPORT</a></div>
+                    <div class="nav-item" id="sup"><a href="#">IT SUPPORT</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Managed IT Support</a></li>
                         <li><a href="#">Business IT Support</a></li>
@@ -170,7 +170,7 @@
                         <li><a href="#">Cloud Service Provider</a></li>
                         <li><a href="#">Data Backup & Disaster Recovery</a></li>
                     </ul>
-                    <div class="nav-item" id="mar"><a href="#"><small>DIGITAL</small>MARKETING</a></div>
+                    <div class="nav-item" id="mar"><a href="#">DIGITAL MARKETING</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Search Engine Optimisation (SEO)</a></li> 
                         <li><a href="#">Pay Per Click Advertising (PPC)</a></li>
@@ -179,7 +179,7 @@
                         <li><a href="#">Social Media Marketing</a></li>
                         <li><a href="#">Content Marketing</a></li>
                     </ul>
-                    <div class="nav-item" id="ser"><a href="#"><small>TELECOMS</small>SERVICES</a></div>
+                    <div class="nav-item" id="ser"><a href="#">TELECOMS SERVICES</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Business Mobile</a></li>
                         <li><a href="#">Hosted VoIP Provider</a></li>
@@ -188,7 +188,7 @@
                         <li><a href="#">Leased Lines Provider</a></li>
                         <li><a href="#">3CX Systems</a></li>
                     </ul>
-                    <div class="nav-item" id="des"><a href="#"><small>WEB</small>DESIGN</a></div>
+                    <div class="nav-item" id="des"><a href="#">WEB DESIGN</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Bespoke Website Design</a></li>
                         <li><a href="#">eCommerce Website Design</a></li>
@@ -197,7 +197,7 @@
                         <li><a href="#">Mobile App Development</a></li>
                         <li><a href="#">Web Hosting</a></li>
                     </ul>
-                    <div class="nav-item" id="sec"><a href="#"><small>CYBER</small>SECURITY</a></div>
+                    <div class="nav-item" id="sec"><a href="#">CYBER SECURITY</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Cyber Security Assessment</a></li>
                         <li><a href="#">Cyber Security Management</a></li>
@@ -206,7 +206,7 @@
                         <li><a href="#">PCI Compliance</a></li>
                         <li><a href="#">Hacking Prevention</a></li>
                     </ul>
-                    <div class="nav-item" id="cou"><a href="#"><small>DEVELOPER</small>COURSE</a></div>
+                    <div class="nav-item" id="cou"><a href="#">DEVELOPER COURSE</a></div>
                     <ul class="sidebar-links">
                         <li><a href="#">Train For A Career In Tech</a></li>
                         <li><a href="#">Skills Bootcamp</a></li>
