--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <ul class="content-items">
                             <li>
                                 <div id="sof" class="content-item-box major">
-                                    <div class="content-item__icon icon-laptop"></div>
+                                    <div class="content-item__icon icon-computer"></div>
                                     <h3>Consultancy & Development</h3>
                                     <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
                                     <button>Read More</button>
@@ -287,7 +287,7 @@
                             </li>
                             <li>
                                 <div id="ser" class="content-item-box minor">
-                                    <div class="content-item__icon icon-phone"></div>
+                                    <div class="content-item__icon icon-phone_in_talk"></div>
                                     <h3>Telecoms Services</h3>
                                     <p>Business telephony solutions including mobile & connectivity solutions.</p>
                                     <button>Read More</button>
@@ -295,7 +295,7 @@
                             </li>
                             <li>
                                 <div id="des" class="content-item-box minor">
-                                    <div class="content-item__icon icon-embed2"></div>
+                                    <div class="content-item__icon icon-code"></div>
                                     <h3>Web Design</h3>
                                     <p>User-centric design for businesses looking to make a lasting impression.</p>
                                     <button>Read More</button>
@@ -369,11 +369,11 @@
                             <div class="welcome-section2-content">
                                 <h1>What Our Clients Think</h1>
                                 <div class="stars">
-                                    <div class="star icon-star-full"></div>
-                                    <div class="star icon-star-full"></div>
-                                    <div class="star icon-star-full"></div>
-                                    <div class="star icon-star-full"></div>
-                                    <div class="star icon-star-full"></div>
+                                    <div class="star icon-star"></div>
+                                    <div class="star icon-star"></div>
+                                    <div class="star icon-star"></div>
+                                    <div class="star icon-star"></div>
+                                    <div class="star icon-star"></div>
                                 </div>
                                 <q>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</q>
                                 <p id="author">Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
