Fix the footer and some mobile things.

--- a/index.html
+++ b/index.html
@@ -566,6 +566,8 @@
                                 <li>Data Retention</li>
                                 <li>CCTV Policy</li>
                                 <li>Environmental Policy</li>
+                                <li>Sexual Harassment Policy</li>
+                                <li>Modern Slavery Statement</li>
                                 <li>Terms and Conditions</li>
                             </ul>
                         </div>
@@ -608,7 +610,10 @@
 
                 <div class="footer-copyright">
                     <div class="container">
-                        <p>© Copyright Netmatters 2025. All rights reserved. - <a href="#">Sitemap</a></p>
+                        <p>© Copyright Netmatters 2025.</p>
+                        <p>All rights reserved.</p>
+                        <p id="copyright-divider">-</p>
+                        <a href="#">Sitemap</a>
                     </div>
                 </div>            
             </footer>
